<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Ticktake</string>
    <string name="api_key">Your razorpay Api Key</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="new_header_title">Add Event</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Order</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">todo</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_price">Event Price</string>
    <string name="event_description">Event Description</string>
    <string name="event_city">Event City</string>
    <string name="event_location">Event Location</string>
    <string name="city">Cities</string>
    <string name="search">Search</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="username">Username</string>
    <string name="enter_the_user_name">ex:yourname</string>
    <string name="email_id">Email ID</string>
    <string name="enter_the_email_id">ex:yourname@gmail.com</string>
    <string name="enter_the_country">Enter the country</string>
    <string name="add">+</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_phone_number">ex:0000000000</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="enter_the_password">ex:123456789ABC</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_the_confirm_password">ex:123456789ABC</string>
    <string name="sign_up_prompt">Want to Register?</string>
    <string name="sign_up">Click Here</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="space" />
    <string name="sign_in">Sign In</string>
    <string name="add_event">Add Event</string>
    <string name="upload_image">Upload Image</string>
    <string name="register_page">Register Page</string>
    <string name="login_page">Login Page</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="forgot_password">Click Here</string>
    <string name="logout">Logout</string>
    <string name="forgot_password_page">Forgot Password Page</string>
    <string name="send_email">Send Email</string>
    <string name="select_country">Select Country</string>
    <string name="_91">+91</string>
    <string name="gender1">Gender :-</string>
    <string name="mobile_no1">Mobile No. :-</string>
    <string name="country1">Country :-</string>
    <string name="email_id1">Email Id :-</string>
    <string name="username1">UserName :-</string>
    <string name="enter_the_otp_number">Enter The OTP Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="welcome">Welcome 🎉</string>
    <string name="welcome_to_your_past_events">Welcome to Your Past Events</string>
    <string name="welcome_to_your_upcoming_events">Welcome to your Upcoming Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
</resources>