<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background_color"
      tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/logofont"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textField1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font"
        android:text="@string/username"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:textColorHint="@color/colorTextPrimary"
        android:hint="@string/enter_the_user_name"
        app:layout_constraintBottom_toTopOf="@+id/textField1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edUserName"
          android:textColor="@color/label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/main_font"
          android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font"
        android:text="@string/email_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textField1"
        app:layout_constraintStart_toStartOf="@+id/textField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorTextPrimary"
        android:layout_marginBottom="25dp"
        android:hint="@string/enter_the_email_id"
        app:layout_constraintBottom_toTopOf="@+id/textFieldgd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edEmailId"
          android:textColor="@color/colorTextPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/main_font"
          android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fontFamily="@font/main_font"
        android:text="@string/phone_number"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFieldgd"
        app:layout_constraintStart_toStartOf="@+id/textField1" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldgd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:textColorHint="@color/colorTextPrimary"
        android:hint="@string/enter_the_phone_number"
        app:layout_constraintTop_toBottomOf="@id/textField1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edPhoneNum"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:textColor="@color/colorTextPrimary"
          android:fontFamily="@font/main_font"
          android:inputType="number"
          android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font"
        android:text="@string/password"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordL"
        app:layout_constraintStart_toStartOf="@+id/textFieldgd" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="385dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/enter_the_password"
        android:textColorHint="@color/colorTextPrimary"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldgd"
        app:passwordToggleTint="@color/colorTextSecondary">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/main_font"
          android:inputType="textPassword"
          android:textColor="@color/label"
          android:textColorHint="@color/label" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/txtConPasswordL"
        app:layout_constraintStart_toStartOf="@+id/txtPasswordL" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConPasswordL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_the_confirm_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:textColorHint="@color/colorTextPrimary"
        app:passwordToggleTint="@color/colorTextSecondary"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordL">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edConPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/main_font"
          android:inputType="textPassword"
          android:textColor="@color/colorTextPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/main_font"
        android:text="@string/sign_up_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConPasswordL" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
