<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/main_font"
            android:text="@string/new_header_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textField1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textField"
            app:layout_constraintStart_toStartOf="@+id/textField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/colorTextPrimary"
            android:hint="@string/enter_the_user_name"
            app:layout_constraintBottom_toTopOf="@+id/textField1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_title"
                android:textColor="@color/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:fontFamily="@font/main_font"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textField1"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorTextPrimary"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_email_id"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_date"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_time"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd"
            app:layout_constraintStart_toStartOf="@+id/textFieldgd"
            app:layout_constraintTop_toBottomOf="@+id/textField1" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldgd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_phone_number"
            android:textColorHint="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.317">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/main_font"
                android:inputType="time"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_description"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd2"
            app:layout_constraintStart_toStartOf="@+id/textFieldgd2"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldgd2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="385dp"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_goneMarginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_password"
            android:textColorHint="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd"
            app:passwordToggleTint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="textLongMessage"
                android:textColor="@color/label"
                android:textColorHint="@color/label" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_price"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd3"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd2"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldgd3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="385dp"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_goneMarginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_password"
            android:textColorHint="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd2"
            app:passwordToggleTint="@color/colorTextSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:inputType="textLongMessage"
            android:textColor="@color/label"
            android:textColorHint="@color/label" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_location"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd4"
            app:layout_constraintStart_toStartOf="@+id/textFieldgd4"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldgd4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="385dp"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_goneMarginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_password"
            android:textColorHint="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd3"
            app:passwordToggleTint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="textLongMessage"
                android:textColor="@color/label"
                android:textColorHint="@color/label" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/event_city"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textFieldgd5"
            app:layout_constraintStart_toStartOf="@+id/textFieldgd5"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldgd5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="385dp"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_goneMarginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_the_password"
            android:textColorHint="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd4"
            app:passwordToggleTint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="textLongMessage"
                android:textColor="@color/label"
                android:textColorHint="@color/label" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:onClick="onUploadImageClick"
            app:layout_constraintTop_toTopOf="@id/textFieldgd5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/addeventBtn"/>


        <Button
            android:id="@+id/addeventBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/secular_one_regular"
            android:text="@string/add_event"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldgd2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
